Add email contact

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -8,3 +8,5 @@ I'm Tomás Fernandes, a computer scientist at the University of Warwick.
 
 I'm particularly interested in big data and advancements towards more general-purpose machine learning models (see [PaLM](https://ai.googleblog.com/2022/04/pathways-language-model-palm-scaling-to.html), [Perceiver](https://www.deepmind.com/blog/building-architectures-that-can-handle-the-worlds-data)).
 More recently I've also developed an interest in [graph](https://neo4j.com/) and [time-series](https://www.timescale.com/) databases, and [graph neural networks](https://distill.pub/2021/gnn-intro/).
+
+Feel free to reach out by email at `contact at tomff dot com`.
