--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -6,4 +6,4 @@ import Avatar from "../../../components/Avatar"
   Hi.
 </Text>
 
-I'm a computer scientist at the University of Warwick with interested in distributed systems, multimodal learning, and learning on graphs.
+I'm a computer scientist at the University of Warwick interested in distributed systems, multimodal learning, and learning on graphs.
